--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,19 +1,11 @@
-.TaskTab {
-  color: lightgray;
-}
-
-.Timetable {
-  width: 50%;
-  border: 10px;
-  /* border-color: cyan; */
-  color: black;
-}
-
 
 
 #addTaskTab{
   width: 25%;
   display: inline-block;
+  color: blue;
+  background-color: brown;
+  
 }
 
 #timeTable {
@@ -26,4 +18,9 @@
   display: flex;
   flex-direction: row;
   /* flex-grow: ; */
+}
+
+.Input {
+  width: 25%;
+  display: inline-block;
 }
