--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -8,8 +8,8 @@
   width: 30%;
   height: 100vh;
   display: inline-block;
-  color: blue;
-  background-color: white;
+  color: white;
+  background-color:black;
   
 }
 
@@ -17,10 +17,13 @@
   width: 70%;
   height: 100vh;
   display: inline-block;
+  background-color:black;
+  color: white;
+  
 }
 
 .input-details{
-  color: darkblue;
+  color: white;
 }
 
 label {
