--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -88,6 +88,7 @@ Input {
 .fc-col-header-cell-cushion  {
   /* background-color: ; */
   color: darkslategray;
+  pointer-events:none
   
 }
 
@@ -103,5 +104,7 @@ Input {
 }
 
 .fc {
+  margin-top: 20px;
+  margin-bottom: 20px;
   margin-right: 20px;
 }
